# Skyrim-Content-Tools

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  DESIGN_ordered.md
cmake/glad/include/KHR/: khrplatform.h
cmake/glad/include/glad/: gl.h  glad.h
cmake/glad/src/: gl.c
docs/: motion-pipeline-research.md  platform-expansion.md  reorganization-plan.md
patches/: imgui_extra_math.inl
sct-bridge/: Bridge.cs  PluginBridge.cs  SctBridge.csproj  SctBridge.csproj.in
src/: ActorDocument.h  AnimClip.cpp  AnimClip.h  App.cpp  App.h  AppState.cpp  AppState.h  BsaReader.cpp  BsaReader.h  CMakeLists.txt  Camera.h  CameraShot.h  CastEntry.h  ControllerInput.cpp  ControllerInput.h  DdsLoader.cpp  DdsLoader.h  DotNetHost.cpp  DotNetHost.h  FaceClip.cpp  FaceClip.h  HavokAnimation.cpp  HavokAnimation.h  HavokSkeleton.cpp  HavokSkeleton.h  IPluginBackend.h  MuFeeConfig.cpp  MutagenBackend.cpp  MutagenBackend.h  NifAnim.cpp  NifAnim.h  NifDocument.cpp  NifDocument.h  NifLoader.cpp  NifLoader.h  Pose.cpp  Pose.h  ProjectFile.cpp  ProjectFile.h  Renderer.cpp  (+10 more)
src/anim/: AnimClip.cpp  AnimClip.h  FaceClip.cpp  HavokAnimation.cpp  HavokAnimation.h  HavokSkeleton.cpp  HavokSkeleton.h  Pose.cpp  Sequence.cpp  Sequence.h
src/app/: App.cpp  AppState.cpp  AppState.h  ProjectFile.cpp  main.cpp
src/asset/: BsaReader.cpp  DdsLoader.cpp  MuFeeConfig.cpp  MuFeeConfig.h  NifAnim.cpp  NifDocument.cpp  NifDocument.h  NifLoader.cpp  TerrainMesh.cpp  TerrainMesh.h  TriDocument.cpp
src/core/io/: BinaryWriter.h  BoundsSafeReader.h
src/core/math/: Interpolation.h
src/core/render/: GpuAssetCache.h
src/core/threading/: BackgroundWorker.h
src/env/: CellEnvironmentManager.cpp  CellEnvironmentManager.h  TerrainStreamManager.cpp  TerrainStreamManager.h
src/export/annotation/: AnnotationEncoder.cpp  AnnotationEncoder.h  EventAnnotation.h  FaceAnnotation.h
src/export/hkx/: AnimationExport.h  BehaviorGraph.h  HkxWriter.cpp  HkxWriter.h
src/export/yaml/: ActorPlacement.h  SpawnList.h  WaitNode.h  YamlSidecar.cpp  YamlSidecar.h
src/plugin/: DotNetHost.cpp  DotNetHost.h  IPluginBackend.h  MutagenBackend.cpp  MutagenBackend.h
src/renderer/: GlSceneRenderer.cpp  GlSceneRenderer.h  ISceneRenderer.h  ShaderSources.h
src/scene/: ActorDocument.h
src/ui/: Camera.h  ControllerInput.cpp  ControllerInput.h  IPanel.h  MainLayout.cpp  MainLayout.h  StylePalette.h  TabRegistry.cpp  TabRegistry.h  TrackRegistry.cpp  TrackRegistry.h
src/ui/panels/: ActorPropertiesPanel.cpp  ActorPropertiesPanel.h  ActorRenderCache.cpp  ActorRenderCache.h  AnimatorPanel.cpp  AnimatorPanel.h  ClipBinPanel.cpp  ClipBinPanel.h  InspectorPanel.cpp  InspectorPanel.h  NifBrowserPanel.cpp  NifBrowserPanel.h  NifEditorPanel.cpp  NifEditorPanel.h  NifEditorState.cpp  NifEditorState.h  NifGraphPanel.cpp  NifGraphPanel.h  PluginBrowserPanel.cpp  PluginBrowserPanel.h  SceneGraphPanel.cpp  SceneGraphPanel.h  TimelinePanel.cpp  TimelinePanel.h  ViewportPanel.cpp  ViewportPanel.h
